Fix footer jumping on mobile
Used overflow hidden on the body so that the URL bar never hides. This is a shame as it takes up screen real estate on mobile.

However another advantage is that the content doesn't move up as the URL bar hides and then down when the reverse scroll takes effect which avoids a jarring effect.

Closes #46.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,7 @@ html,
 body {
 	margin: 0;
 	padding: 0;
+	overflow: hidden;
 }
 
 /* Should just be able to set height 100% on html for the mobile URL bar workaround but for some reason this is required with NextJS */
@@ -52,11 +53,6 @@ body::-webkit-scrollbar {
 	background-clip: text;
 	-webkit-text-fill-color: transparent;
 	background-size: cover;
-}
-
-.off-screen {
-	opacity: 0;
-	transform: translateY(-100vh);
 }
 
 .expanded {
